tests/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DO

Grammar

Rule 0     S' -> program
Rule 1     program -> many_class_decl
Rule 2     many_class_decl -> class_decl many_class_decl
Rule 3     many_class_decl -> empty
Rule 4     class_decl -> CLASS ID EXTENDS ID LCURLY class_body_decl_list RCURLY
Rule 5     class_decl -> CLASS ID LCURLY class_body_decl_list RCURLY
Rule 6     class_body_decl_list -> class_body_decl many_class_body_decl
Rule 7     many_class_body_decl -> class_body_decl many_class_body_decl
Rule 8     many_class_body_decl -> empty
Rule 9     class_body_decl -> field_decl
Rule 10    class_body_decl -> method_decl
Rule 11    class_body_decl -> constructor_decl
Rule 12    field_decl -> modifier var_decl
Rule 13    modifier -> PUBLIC STATIC
Rule 14    modifier -> PRIVATE STATIC
Rule 15    modifier -> STATIC
Rule 16    modifier -> PUBLIC
Rule 17    modifier -> PRIVATE
Rule 18    modifier -> empty
Rule 19    var_decl -> type variables SEMICOLON
Rule 20    type -> INT
Rule 21    type -> FLOAT
Rule 22    type -> BOOLEAN
Rule 23    type -> VOID
Rule 24    type -> NULL
Rule 25    type -> ID
Rule 26    variables -> variable comma_var
Rule 27    comma_var -> COMMA variable comma_var
Rule 28    comma_var -> empty
Rule 29    variable -> ID
Rule 30    method_decl -> modifier type ID LPAREN formals RPAREN block
Rule 31    method_decl -> modifier VOID ID LPAREN formals RPAREN block
Rule 32    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 33    formals -> formal_param comma_formal
Rule 34    formals -> empty
Rule 35    comma_formal -> COMMA formal_param comma_formal
Rule 36    comma_formal -> empty
Rule 37    formal_param -> type variable
Rule 38    block -> LCURLY many_stmts RCURLY
Rule 39    many_stmts -> stmt many_stmts
Rule 40    many_stmts -> empty
Rule 41    stmt -> IF LPAREN expr RPAREN stmt
Rule 42    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 43    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 44    stmt -> FOR LPAREN for_cond1 SEMICOLON for_cond2 SEMICOLON for_cond3 RPAREN stmt
Rule 45    stmt -> RETURN return_val SEMICOLON
Rule 46    stmt -> stmt_expr SEMICOLON
Rule 47    stmt -> BREAK SEMICOLON
Rule 48    stmt -> CONTINUE SEMICOLON
Rule 49    stmt -> block
Rule 50    stmt -> var_decl
Rule 51    stmt -> SEMICOLON
Rule 52    for_cond1 -> stmt_expr
Rule 53    for_cond1 -> empty
Rule 54    for_cond2 -> expr
Rule 55    for_cond2 -> empty
Rule 56    for_cond3 -> stmt_expr
Rule 57    for_cond3 -> empty
Rule 58    return_val -> expr
Rule 59    return_val -> empty
Rule 60    literal -> INT_CONST
Rule 61    literal -> FLOAT_CONST
Rule 62    literal -> STRING_CONST
Rule 63    literal -> NULL
Rule 64    literal -> TRUE
Rule 65    literal -> FALSE
Rule 66    primary -> literal
Rule 67    primary -> THIS
Rule 68    primary -> SUPER
Rule 69    primary -> LPAREN expr RPAREN
Rule 70    primary -> NEW ID LPAREN arguments RPAREN
Rule 71    primary -> lhs
Rule 72    primary -> method_invocation
Rule 73    arguments -> expr many_comma_expr
Rule 74    arguments -> empty
Rule 75    many_comma_expr -> COMMA expr many_comma_expr
Rule 76    many_comma_expr -> empty
Rule 77    lhs -> field_access
Rule 78    field_access -> primary PERIOD ID
Rule 79    field_access -> ID
Rule 80    method_invocation -> field_access LPAREN arguments RPAREN
Rule 81    expr -> primary
Rule 82    expr -> assign
Rule 83    expr -> expr PLUS expr
Rule 84    expr -> expr MINUS expr
Rule 85    expr -> expr TIMES expr
Rule 86    expr -> expr DIVIDE expr
Rule 87    expr -> expr AND expr
Rule 88    expr -> expr OR expr
Rule 89    expr -> expr EEQUALS expr
Rule 90    expr -> expr NEQUALS expr
Rule 91    expr -> expr LESS expr
Rule 92    expr -> expr GREATER expr
Rule 93    expr -> expr LEQUALS expr
Rule 94    expr -> expr GEQUALS expr
Rule 95    expr -> PLUS expr
Rule 96    expr -> MINUS expr
Rule 97    expr -> NOT expr
Rule 98    assign -> lhs EQUALS expr
Rule 99    assign -> lhs PLUSPLUS
Rule 100   assign -> PLUSPLUS lhs
Rule 101   assign -> lhs MINUSMINUS
Rule 102   assign -> MINUSMINUS lhs
Rule 103   stmt_expr -> assign
Rule 104   stmt_expr -> method_invocation
Rule 105   empty -> <empty>

Terminals, with rules where they appear

AND                  : 87
BOOLEAN              : 22
BREAK                : 47
CLASS                : 4 5
COMMA                : 27 35 75
COMMENT              : 
CONTINUE             : 48
DIVIDE               : 86
DO                   : 
EEQUALS              : 89
ELSE                 : 42
EQUALS               : 98
EXTENDS              : 4
FALSE                : 65
FLOAT                : 21
FLOAT_CONST          : 61
FOR                  : 44
GEQUALS              : 94
GREATER              : 92
ID                   : 4 4 5 25 29 30 31 32 70 78 79
IF                   : 41 42
INT                  : 20
INT_CONST            : 60
LCURLY               : 4 5 38
LEQUALS              : 93
LESS                 : 91
LPAREN               : 30 31 32 41 42 43 44 69 70 80
MINUS                : 84 96
MINUSMINUS           : 101 102
NEQUALS              : 90
NEW                  : 70
NOT                  : 97
NULL                 : 24 63
OR                   : 88
PERIOD               : 78
PLUS                 : 83 95
PLUSPLUS             : 99 100
PRIVATE              : 14 17
PUBLIC               : 13 16
RCURLY               : 4 5 38
RETURN               : 45
RPAREN               : 30 31 32 41 42 43 44 69 70 80
SEMICOLON            : 19 44 44 45 46 47 48 51
STATIC               : 13 14 15
STRING_CONST         : 62
SUPER                : 68
THIS                 : 67
TIMES                : 85
TRUE                 : 64
VOID                 : 23 31
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

arguments            : 70 80
assign               : 82 103
block                : 30 31 32 49
class_body_decl      : 6 7
class_body_decl_list : 4 5
class_decl           : 2
comma_formal         : 33 35
comma_var            : 26 27
constructor_decl     : 11
empty                : 3 8 18 28 34 36 40 53 55 57 59 74 76
expr                 : 41 42 43 54 58 69 73 75 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 96 97 98
field_access         : 77 80
field_decl           : 9
for_cond1            : 44
for_cond2            : 44
for_cond3            : 44
formal_param         : 33 35
formals              : 30 31 32
lhs                  : 71 98 99 100 101 102
literal              : 66
many_class_body_decl : 6 7
many_class_decl      : 1 2
many_comma_expr      : 73 75
many_stmts           : 38 39
method_decl          : 10
method_invocation    : 72 104
modifier             : 12 30 31 32
primary              : 78 81
program              : 0
return_val           : 45
stmt                 : 39 41 42 42 43 44
stmt_expr            : 46 52 56
type                 : 19 30 37
var_decl             : 12 50
variable             : 26 27 37
variables            : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . many_class_decl
    (2) many_class_decl -> . class_decl many_class_decl
    (3) many_class_decl -> . empty
    (4) class_decl -> . CLASS ID EXTENDS ID LCURLY class_body_decl_list RCURLY
    (5) class_decl -> . CLASS ID LCURLY class_body_decl_list RCURLY
    (105) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 105 (empty -> .)

    program                        shift and go to state 1
    many_class_decl                shift and go to state 2
    class_decl                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> many_class_decl .

    $end            reduce using rule 1 (program -> many_class_decl .)


state 3

    (2) many_class_decl -> class_decl . many_class_decl
    (2) many_class_decl -> . class_decl many_class_decl
    (3) many_class_decl -> . empty
    (4) class_decl -> . CLASS ID EXTENDS ID LCURLY class_body_decl_list RCURLY
    (5) class_decl -> . CLASS ID LCURLY class_body_decl_list RCURLY
    (105) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 105 (empty -> .)

    class_decl                     shift and go to state 3
    many_class_decl                shift and go to state 6
    empty                          shift and go to state 4

state 4

    (3) many_class_decl -> empty .

    $end            reduce using rule 3 (many_class_decl -> empty .)


state 5

    (4) class_decl -> CLASS . ID EXTENDS ID LCURLY class_body_decl_list RCURLY
    (5) class_decl -> CLASS . ID LCURLY class_body_decl_list RCURLY

    ID              shift and go to state 7


state 6

    (2) many_class_decl -> class_decl many_class_decl .

    $end            reduce using rule 2 (many_class_decl -> class_decl many_class_decl .)


state 7

    (4) class_decl -> CLASS ID . EXTENDS ID LCURLY class_body_decl_list RCURLY
    (5) class_decl -> CLASS ID . LCURLY class_body_decl_list RCURLY

    EXTENDS         shift and go to state 8
    LCURLY          shift and go to state 9


state 8

    (4) class_decl -> CLASS ID EXTENDS . ID LCURLY class_body_decl_list RCURLY

    ID              shift and go to state 10


state 9

    (5) class_decl -> CLASS ID LCURLY . class_body_decl_list RCURLY
    (6) class_body_decl_list -> . class_body_decl many_class_body_decl
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (12) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . empty
    (105) empty -> .

    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 19
    STATIC          shift and go to state 18
    VOID            reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)
    NULL            reduce using rule 105 (empty -> .)

    class_body_decl_list           shift and go to state 11
    class_body_decl                shift and go to state 12
    field_decl                     shift and go to state 13
    method_decl                    shift and go to state 14
    constructor_decl               shift and go to state 15
    modifier                       shift and go to state 16
    empty                          shift and go to state 20

state 10

    (4) class_decl -> CLASS ID EXTENDS ID . LCURLY class_body_decl_list RCURLY

    LCURLY          shift and go to state 21


state 11

    (5) class_decl -> CLASS ID LCURLY class_body_decl_list . RCURLY

    RCURLY          shift and go to state 22


state 12

    (6) class_body_decl_list -> class_body_decl . many_class_body_decl
    (7) many_class_body_decl -> . class_body_decl many_class_body_decl
    (8) many_class_body_decl -> . empty
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (105) empty -> .
    (12) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . empty

    RCURLY          reduce using rule 105 (empty -> .)
    VOID            reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)
    NULL            reduce using rule 105 (empty -> .)
    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 19
    STATIC          shift and go to state 18

    class_body_decl                shift and go to state 23
    many_class_body_decl           shift and go to state 24
    empty                          shift and go to state 25
    field_decl                     shift and go to state 13
    method_decl                    shift and go to state 14
    constructor_decl               shift and go to state 15
    modifier                       shift and go to state 16

state 13

    (9) class_body_decl -> field_decl .

    PUBLIC          reduce using rule 9 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> field_decl .)
    VOID            reduce using rule 9 (class_body_decl -> field_decl .)
    ID              reduce using rule 9 (class_body_decl -> field_decl .)
    INT             reduce using rule 9 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> field_decl .)
    NULL            reduce using rule 9 (class_body_decl -> field_decl .)
    RCURLY          reduce using rule 9 (class_body_decl -> field_decl .)


state 14

    (10) class_body_decl -> method_decl .

    PUBLIC          reduce using rule 10 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> method_decl .)
    VOID            reduce using rule 10 (class_body_decl -> method_decl .)
    ID              reduce using rule 10 (class_body_decl -> method_decl .)
    INT             reduce using rule 10 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> method_decl .)
    NULL            reduce using rule 10 (class_body_decl -> method_decl .)
    RCURLY          reduce using rule 10 (class_body_decl -> method_decl .)


state 15

    (11) class_body_decl -> constructor_decl .

    PUBLIC          reduce using rule 11 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 11 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 11 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 11 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> constructor_decl .)
    NULL            reduce using rule 11 (class_body_decl -> constructor_decl .)
    RCURLY          reduce using rule 11 (class_body_decl -> constructor_decl .)


state 16

    (12) field_decl -> modifier . var_decl
    (30) method_decl -> modifier . type ID LPAREN formals RPAREN block
    (31) method_decl -> modifier . VOID ID LPAREN formals RPAREN block
    (32) constructor_decl -> modifier . ID LPAREN formals RPAREN block
    (19) var_decl -> . type variables SEMICOLON
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . VOID
    (24) type -> . NULL
    (25) type -> . ID

    VOID            shift and go to state 29
    ID              shift and go to state 28
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    BOOLEAN         shift and go to state 32
    NULL            shift and go to state 33

    var_decl                       shift and go to state 26
    type                           shift and go to state 27

state 17

    (13) modifier -> PUBLIC . STATIC
    (16) modifier -> PUBLIC .

    STATIC          shift and go to state 34
    VOID            reduce using rule 16 (modifier -> PUBLIC .)
    ID              reduce using rule 16 (modifier -> PUBLIC .)
    INT             reduce using rule 16 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 16 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 16 (modifier -> PUBLIC .)
    NULL            reduce using rule 16 (modifier -> PUBLIC .)


state 18

    (15) modifier -> STATIC .

    VOID            reduce using rule 15 (modifier -> STATIC .)
    ID              reduce using rule 15 (modifier -> STATIC .)
    INT             reduce using rule 15 (modifier -> STATIC .)
    FLOAT           reduce using rule 15 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 15 (modifier -> STATIC .)
    NULL            reduce using rule 15 (modifier -> STATIC .)


state 19

    (14) modifier -> PRIVATE . STATIC
    (17) modifier -> PRIVATE .

    STATIC          shift and go to state 35
    VOID            reduce using rule 17 (modifier -> PRIVATE .)
    ID              reduce using rule 17 (modifier -> PRIVATE .)
    INT             reduce using rule 17 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 17 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 17 (modifier -> PRIVATE .)
    NULL            reduce using rule 17 (modifier -> PRIVATE .)


state 20

    (18) modifier -> empty .

    VOID            reduce using rule 18 (modifier -> empty .)
    ID              reduce using rule 18 (modifier -> empty .)
    INT             reduce using rule 18 (modifier -> empty .)
    FLOAT           reduce using rule 18 (modifier -> empty .)
    BOOLEAN         reduce using rule 18 (modifier -> empty .)
    NULL            reduce using rule 18 (modifier -> empty .)


state 21

    (4) class_decl -> CLASS ID EXTENDS ID LCURLY . class_body_decl_list RCURLY
    (6) class_body_decl_list -> . class_body_decl many_class_body_decl
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (12) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . empty
    (105) empty -> .

    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 19
    STATIC          shift and go to state 18
    VOID            reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)
    NULL            reduce using rule 105 (empty -> .)

    class_body_decl_list           shift and go to state 36
    class_body_decl                shift and go to state 12
    field_decl                     shift and go to state 13
    method_decl                    shift and go to state 14
    constructor_decl               shift and go to state 15
    modifier                       shift and go to state 16
    empty                          shift and go to state 20

state 22

    (5) class_decl -> CLASS ID LCURLY class_body_decl_list RCURLY .

    CLASS           reduce using rule 5 (class_decl -> CLASS ID LCURLY class_body_decl_list RCURLY .)
    $end            reduce using rule 5 (class_decl -> CLASS ID LCURLY class_body_decl_list RCURLY .)


state 23

    (7) many_class_body_decl -> class_body_decl . many_class_body_decl
    (7) many_class_body_decl -> . class_body_decl many_class_body_decl
    (8) many_class_body_decl -> . empty
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (105) empty -> .
    (12) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (32) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . empty

    RCURLY          reduce using rule 105 (empty -> .)
    VOID            reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)
    NULL            reduce using rule 105 (empty -> .)
    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 19
    STATIC          shift and go to state 18

    class_body_decl                shift and go to state 23
    many_class_body_decl           shift and go to state 37
    empty                          shift and go to state 25
    field_decl                     shift and go to state 13
    method_decl                    shift and go to state 14
    constructor_decl               shift and go to state 15
    modifier                       shift and go to state 16

state 24

    (6) class_body_decl_list -> class_body_decl many_class_body_decl .

    RCURLY          reduce using rule 6 (class_body_decl_list -> class_body_decl many_class_body_decl .)


state 25

    (8) many_class_body_decl -> empty .
    (18) modifier -> empty .

    RCURLY          reduce using rule 8 (many_class_body_decl -> empty .)
    VOID            reduce using rule 18 (modifier -> empty .)
    ID              reduce using rule 18 (modifier -> empty .)
    INT             reduce using rule 18 (modifier -> empty .)
    FLOAT           reduce using rule 18 (modifier -> empty .)
    BOOLEAN         reduce using rule 18 (modifier -> empty .)
    NULL            reduce using rule 18 (modifier -> empty .)


state 26

    (12) field_decl -> modifier var_decl .

    PUBLIC          reduce using rule 12 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 12 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 12 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 12 (field_decl -> modifier var_decl .)
    ID              reduce using rule 12 (field_decl -> modifier var_decl .)
    INT             reduce using rule 12 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 12 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 12 (field_decl -> modifier var_decl .)
    NULL            reduce using rule 12 (field_decl -> modifier var_decl .)
    RCURLY          reduce using rule 12 (field_decl -> modifier var_decl .)


state 27

    (30) method_decl -> modifier type . ID LPAREN formals RPAREN block
    (19) var_decl -> type . variables SEMICOLON
    (26) variables -> . variable comma_var
    (29) variable -> . ID

    ID              shift and go to state 38

    variables                      shift and go to state 39
    variable                       shift and go to state 40

state 28

    (32) constructor_decl -> modifier ID . LPAREN formals RPAREN block
    (25) type -> ID .

    LPAREN          shift and go to state 41
    ID              reduce using rule 25 (type -> ID .)


state 29

    (31) method_decl -> modifier VOID . ID LPAREN formals RPAREN block
    (23) type -> VOID .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 42

  ! ID              [ reduce using rule 23 (type -> VOID .) ]


state 30

    (20) type -> INT .

    ID              reduce using rule 20 (type -> INT .)


state 31

    (21) type -> FLOAT .

    ID              reduce using rule 21 (type -> FLOAT .)


state 32

    (22) type -> BOOLEAN .

    ID              reduce using rule 22 (type -> BOOLEAN .)


state 33

    (24) type -> NULL .

    ID              reduce using rule 24 (type -> NULL .)


state 34

    (13) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 13 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 13 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 13 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 13 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 13 (modifier -> PUBLIC STATIC .)
    NULL            reduce using rule 13 (modifier -> PUBLIC STATIC .)


state 35

    (14) modifier -> PRIVATE STATIC .

    VOID            reduce using rule 14 (modifier -> PRIVATE STATIC .)
    ID              reduce using rule 14 (modifier -> PRIVATE STATIC .)
    INT             reduce using rule 14 (modifier -> PRIVATE STATIC .)
    FLOAT           reduce using rule 14 (modifier -> PRIVATE STATIC .)
    BOOLEAN         reduce using rule 14 (modifier -> PRIVATE STATIC .)
    NULL            reduce using rule 14 (modifier -> PRIVATE STATIC .)


state 36

    (4) class_decl -> CLASS ID EXTENDS ID LCURLY class_body_decl_list . RCURLY

    RCURLY          shift and go to state 43


state 37

    (7) many_class_body_decl -> class_body_decl many_class_body_decl .

    RCURLY          reduce using rule 7 (many_class_body_decl -> class_body_decl many_class_body_decl .)


state 38

    (30) method_decl -> modifier type ID . LPAREN formals RPAREN block
    (29) variable -> ID .

    LPAREN          shift and go to state 44
    COMMA           reduce using rule 29 (variable -> ID .)
    SEMICOLON       reduce using rule 29 (variable -> ID .)


state 39

    (19) var_decl -> type variables . SEMICOLON

    SEMICOLON       shift and go to state 45


state 40

    (26) variables -> variable . comma_var
    (27) comma_var -> . COMMA variable comma_var
    (28) comma_var -> . empty
    (105) empty -> .

    COMMA           shift and go to state 47
    SEMICOLON       reduce using rule 105 (empty -> .)

    comma_var                      shift and go to state 46
    empty                          shift and go to state 48

state 41

    (32) constructor_decl -> modifier ID LPAREN . formals RPAREN block
    (33) formals -> . formal_param comma_formal
    (34) formals -> . empty
    (37) formal_param -> . type variable
    (105) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . VOID
    (24) type -> . NULL
    (25) type -> . ID

    RPAREN          reduce using rule 105 (empty -> .)
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    BOOLEAN         shift and go to state 32
    VOID            shift and go to state 54
    NULL            shift and go to state 33
    ID              shift and go to state 49

    formals                        shift and go to state 50
    formal_param                   shift and go to state 51
    empty                          shift and go to state 52
    type                           shift and go to state 53

state 42

    (31) method_decl -> modifier VOID ID . LPAREN formals RPAREN block

    LPAREN          shift and go to state 55


state 43

    (4) class_decl -> CLASS ID EXTENDS ID LCURLY class_body_decl_list RCURLY .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID EXTENDS ID LCURLY class_body_decl_list RCURLY .)
    $end            reduce using rule 4 (class_decl -> CLASS ID EXTENDS ID LCURLY class_body_decl_list RCURLY .)


state 44

    (30) method_decl -> modifier type ID LPAREN . formals RPAREN block
    (33) formals -> . formal_param comma_formal
    (34) formals -> . empty
    (37) formal_param -> . type variable
    (105) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . VOID
    (24) type -> . NULL
    (25) type -> . ID

    RPAREN          reduce using rule 105 (empty -> .)
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    BOOLEAN         shift and go to state 32
    VOID            shift and go to state 54
    NULL            shift and go to state 33
    ID              shift and go to state 49

    type                           shift and go to state 53
    formals                        shift and go to state 56
    formal_param                   shift and go to state 51
    empty                          shift and go to state 52

state 45

    (19) var_decl -> type variables SEMICOLON .

    PUBLIC          reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    PRIVATE         reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    STATIC          reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    VOID            reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    ID              reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    INT             reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    FLOAT           reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    BOOLEAN         reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    NULL            reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    RCURLY          reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    IF              reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    WHILE           reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    FOR             reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    RETURN          reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    BREAK           reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    CONTINUE        reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    SEMICOLON       reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    LCURLY          reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    PLUSPLUS        reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    MINUSMINUS      reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    THIS            reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    SUPER           reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    LPAREN          reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    NEW             reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    INT_CONST       reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    FLOAT_CONST     reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    STRING_CONST    reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    TRUE            reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    FALSE           reduce using rule 19 (var_decl -> type variables SEMICOLON .)
    ELSE            reduce using rule 19 (var_decl -> type variables SEMICOLON .)


state 46

    (26) variables -> variable comma_var .

    SEMICOLON       reduce using rule 26 (variables -> variable comma_var .)


state 47

    (27) comma_var -> COMMA . variable comma_var
    (29) variable -> . ID

    ID              shift and go to state 58

    variable                       shift and go to state 57

state 48

    (28) comma_var -> empty .

    SEMICOLON       reduce using rule 28 (comma_var -> empty .)


state 49

    (25) type -> ID .

    ID              reduce using rule 25 (type -> ID .)


state 50

    (32) constructor_decl -> modifier ID LPAREN formals . RPAREN block

    RPAREN          shift and go to state 59


state 51

    (33) formals -> formal_param . comma_formal
    (35) comma_formal -> . COMMA formal_param comma_formal
    (36) comma_formal -> . empty
    (105) empty -> .

    COMMA           shift and go to state 61
    RPAREN          reduce using rule 105 (empty -> .)

    comma_formal                   shift and go to state 60
    empty                          shift and go to state 62

state 52

    (34) formals -> empty .

    RPAREN          reduce using rule 34 (formals -> empty .)


state 53

    (37) formal_param -> type . variable
    (29) variable -> . ID

    ID              shift and go to state 58

    variable                       shift and go to state 63

state 54

    (23) type -> VOID .

    ID              reduce using rule 23 (type -> VOID .)


state 55

    (31) method_decl -> modifier VOID ID LPAREN . formals RPAREN block
    (33) formals -> . formal_param comma_formal
    (34) formals -> . empty
    (37) formal_param -> . type variable
    (105) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . BOOLEAN
    (23) type -> . VOID
    (24) type -> . NULL
    (25) type -> . ID

    RPAREN          reduce using rule 105 (empty -> .)
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    BOOLEAN         shift and go to state 32
    VOID            shift and go to state 54
    NULL            shift and go to state 33
    ID              shift and go to state 49

    formals                        shift and go to state 64
    formal_param                   shift and go to state 51
    empty                          shift and go to state 52
    type                           shift and go to state 53

state 56

    (30) method_decl -> modifier type ID LPAREN formals . RPAREN block

    RPAREN          shift and go to state 65


state 57

    (27) comma_var -> COMMA variable . comma_var
    (27) comma_var -> . COMMA variable comma_var
    (28) comma_var -> . empty
    (105) empty -> .

    COMMA           shift and go to state 47
    SEMICOLON       reduce using rule 105 (empty -> .)

    comma_var                      shift and go to state 66
    empty                          shift and go to state 48

state 58

    (29) variable -> ID .

    COMMA           reduce using rule 29 (variable -> ID .)
    SEMICOLON       reduce using rule 29 (variable -> ID .)
    RPAREN          reduce using rule 29 (variable -> ID .)


state 59

    (32) constructor_decl -> modifier ID LPAREN formals RPAREN . block
    (38) block -> . LCURLY many_stmts RCURLY

    LCURLY          shift and go to state 68

    block                          shift and go to state 67

state 60

    (33) formals -> formal_param comma_formal .

    RPAREN          reduce using rule 33 (formals -> formal_param comma_formal .)


state 61
